# cc-cusom-setting

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  deep-researcher-legacy.md  kv-cache-research-graph.md  main.py  memory.json  pyproject.toml  test.env
.claude/agents/: explore.md  librarian.md  prompt-engineer.md  query-augmentator.md  search-specialist.md  sisyphus-atlas.md  sisyphus-junior.md  sisyphus-metis.md  sisyphus-oracle.md
.claude/commands/research/: convert-to-website.md  deep-research.md  generate-git-poc.md
.claude/skills/sisyphus/: SKILL.md
.claude/skills/sisyphus/references/: agents.md  verification.md
.claude/skills/sisyphus/references/01-planning/: plan-format.md  prometheus-workflow.md
.claude/skills/sisyphus/references/02-execution/: atlas-workflow.md  delegation-template.md
.claude/skills/sisyphus/scripts/: route.py
RESEARCH/KV_Cache_Efficiency_2025/: 01_Executive_Summary.md  02_Full_Report.md  03_Current_SOTA_Techniques.md  04_Industry_Implementation.md  README.md  graph_state.json
RESEARCH/KV_Cache_Efficiency_2025/appendices/: methodology.md  technical_glossary.md
RESEARCH/KV_Cache_Efficiency_2025/data/: performance_benchmarks.md
RESEARCH/KV_Cache_Efficiency_2025/sources/: bibliography.md
app/core/: config.py  exceptions.py  logger.py
app/models/: user.py
app/routers/: hello.py  users.py
app/services/: hello_service.py  user_service.py
webhook-channel/: .env.example  README.md  pyproject.toml  webhook.py
webhook-channel/channels/: __init__.py  chorus.py  slack.py  stderr.py  utils.py
(+5 files in other folders)
